# claxon

./: .gitignore  .travis.yml  Cargo.toml  benchmark.sh  benchmark_against_libflac.sh  changelog.md  performance.md  readme.md  stats.r
.github/workflows/: ci.yml
benches/: readme.md  testsamples.rs
docs/: background.md  fuzzing.md  generic_integer_width.md
examples/: analyze_benchmark.rs  bench_decode.rs  bench_metadata.rs  decode.rs  decode_mp4.rs  decode_ogg.rs  decode_simple.rs  tags.rs
fuzz/: Cargo.toml
fuzz/fuzzers/: decode_full.rs  decode_header.rs  decode_single_block.rs  diff.rs  fuzzer_script_1.rs
src/: bitstream.rs  checksum.rs  crc.rs  decode.rs  error.rs  frame.rs  input.rs  lib.rs  metadata.rs  metadata2.rs  metadata3.rs  sample.rs  subframe.rs
tests/: streaminfo.rs  testsamples.rs
testsamples/: empty_vorbis_comment.flac  large_vendor_string.flac  large_vorbis_comment_block.flac  non_subset.flac  pop.flac  populate.sh  readme.md  repeated_vorbis_comment.flac  short.flac  wasted_bits.flac
tools/: benchmark.sh  benchmark_against_libflac.sh  benchmark_metadata.sh  compare_benches.r  fuzz_on_ci.sh  summarize.py
