[package]
name = "claxon"
version = "0.4.3"
authors = ["Ruud van Asseldonk <dev@veniogames.com>"]
description = "A FLAC decoding library"
keywords = ["flac", "lossless", "audio", "codec"]
categories = ["compression", "multimedia::encoding", "multimedia::audio"]
license = "Apache-2.0"
readme = "readme.md"
homepage = "https://github.com/ruuda/claxon#readme"
repository = "https://github.com/ruuda/claxon"
documentation = "https://docs.rs/claxon"
edition = "2018"

[badges]
travis-ci = { repository = "ruuda/claxon", branch = "v0.4.3" }

[dev-dependencies]
hound    = "3.4.0"
mp4parse = "0.8"
ogg      = "0.7.0"
time     = "0.2.18"
walkdir  = "2.3.1"
